--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Codeminds</title>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link rel="icon" href="anchor.svg"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  </head>
+  <body>
+    <nav class="flex space-between navbar" id="navbar">
+      <div class="flex gap-8">
+        <a class="flex gap-8 title" href="/">
+          <svg id="logo-13" width="40" height="40" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M1.98441 29.2899C1.98441 27.0299 2.42954 24.7919 3.29444 22.704C4.15935 20.6159 5.42701 18.7187 7.02513 17.1206C8.62324 15.5225 10.5204 14.2548 12.6084 13.3899C14.6965 12.5251 16.9344 12.0799 19.1945 12.0799V29.2899H1.98441Z" class="ccustom" fill="#ab1a1a"></path> <path d="M1.98441 29.2899C1.98441 31.55 2.42954 33.7879 3.29444 35.876C4.15935 37.964 5.42701 39.8612 7.02513 41.4593C8.62324 43.0574 10.5204 44.3251 12.6084 45.19C14.6965 46.0549 16.9344 46.5 19.1945 46.5V29.2899H1.98441Z" class="ccompli1" fill="#c94747"></path> <path d="M36.4043 29.2899C36.4043 31.55 35.9595 33.7879 35.0947 35.876C34.2298 37.964 32.9622 39.8612 31.3638 41.4593C29.7657 43.0574 27.8685 44.3251 25.7804 45.19C23.6925 46.0549 21.4545 46.5 19.1945 46.5V29.2899H36.4043Z" class="ccompli2" fill="#ff9191"></path> <path d="M47.0156 14.422C47.0156 21.5586 41.23 27.344 34.0935 27.344H21.1716V14.422C21.1716 7.2854 26.957 1.5 34.0935 1.5C41.23 1.5 47.0156 7.2854 47.0156 14.422Z" class="ccustom" fill="#FF7917"></path></svg>Codeminds
+        </a>
+      </div>
+      <div class="flex gap-128">
+        <div class="flex gap-32">
+          <a href="/#about">About</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSd2wuX3B9NHZsYZVquEYNS2gVA5kiP22qFeOoFz6KsiT3tRcw/viewform?usp=sf_link">Enroll</a>
+          <a href="/#contact">Contact</a>
+          <a href="https://gofund.me/c553013b">Donate</a>
+          <a href="/tutors">Tutors</a>
+        </div>
+        <div class="flex gap-16">
+          <a href="/signup"><button>Sign up</button></a>
+          <a href="/login"><button class="secondary">Log in</button></a>
+          <a onclick="nav();" class="bar">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-list" viewBox="0 0 16 16" class="bar">
+    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+  </svg>
+          </a>
+        </div>
+      </div>
+    </nav>
+    <section class="flex col left gap-32 landing">
+      <h2>Empowering minds, inspiring others, transforming futures</h2>
+      <p>Educating and inspiring the future generation with math and coding - all for free.</p>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd2wuX3B9NHZsYZVquEYNS2gVA5kiP22qFeOoFz6KsiT3tRcw/viewform?usp=sf_link" ><button style="box-shadow: 0px 0px 35px 3px #6447f6;">Start now</button></a>
+    </section>
+    <script src="script.js"></script>
+  </body>
+</html>
