Update navbar background and logo

--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
     <nav class="flex space-between navbar" id="navbar">
       <div class="flex gap-8">
         <a class="flex gap-8 title" href="/">
-           <img src="https://raw.githubusercontent.com/hecker40/enavant/refs/heads/main/enavant%20logo.png"style="width: 40px; height: 40px; object-fit: contain;">
+          <img src="evanant logo.png" width="40px" height="40"/>
           <h6>enavant</h6>
         </a>
       </div>
